bench/results/v0.19.1/summary.md
# Boring CMS benchmark v0.19.1

Run: 2026-09-22T07:43:22.138Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 894.7 | 920.3 | 904.7 | 778 | 550.1 | 782.7 | 728.9 | 784.9 | 806.1 |
| schema_read | 2175.5 | 2522.6 | 2518.6 | 2343 | 1927.5 | 2356.7 | 2116.2 | 2277.5 | 1959.9 |
| create_short | 1485.2 | 1560.9 | 1540.6 | 1429.6 | 1388.7 | 1388 | 1305 | 1395 | 1450.3 |
| create_long | 927 | 948.3 | 971.2 | 968.9 | 916.8 | 910.7 | 873.7 | 930.6 | 905.5 |
| create_short_restcall | 1906 | 1980.5 | 2123.4 | 2033.8 | 1949.1 | 1931.2 | 1857 | 1878.9 | 1836.7 |
| batch_create_short_x200 | 124.5 | 152.2 | 145.8 | 108.8 | 107.9 | 110.3 | 121 | 118.6 | 113.2 |
| read_list_short | 3027.7 | 3446.6 | 3426.4 | 3466.1 | 3177.9 | 3481.2 | 3135.4 | 3417.2 | 3424.9 |
| read_list_long | 2640.8 | 2816.5 | 2583.7 | 2665.1 | 2558.1 | 2599.7 | 2089 | 2275.9 | 2208.4 |
| read_single_short | 4220.5 | 4586.2 | 4901 | 4633.7 | 4403.6 | 4540.9 | 3739.7 | 4143.2 | 4134.8 |
| read_single_long | 2142.5 | 2917.1 | 2862.3 | 2370.7 | 2695.8 | 2684.8 | 2635.2 | 2709.9 | 2438.9 |
| read_304_etag | 3655.9 | 4930.9 | 4795.2 | 4681.1 | 4461.8 | 4434.6 | 4309.9 | 4451.7 | 4955.6 |
| update_then_read | 1192.2 | 1269.5 | 1285.5 | 1127.6 | 1125.8 | 1056.7 | 1018.9 | 1149.3 | 1098.2 |
| rewrite_dry_1pair | 220.5 | 231.9 | 231.4 | 203.5 | 216.4 | 202.9 | 194.3 | 211.4 | 215.5 |
| rewrite_dry_200pairs | 87.9 | 126.3 | 125.8 | 149.8 | 144.3 | 135.1 | 141.4 | 150.4 | 140.6 |
| rewrite_live_200pairs | 64.6 | 66.2 | 70.4 | 107.4 | 86 | 81.2 | 90.3 | 84.5 | 93.3 |
| media_upload_64kb | 1124.1 | 1022.1 | 1106.6 | 713.9 | 785.7 | 830.2 | 776.3 | 883.5 | 956.6 |
| media_serve_64kb | 1693.4 | 1862.3 | 2010 | 1464.9 | 1797.1 | 1607.1 | 1483.3 | 1617.4 | 1787.9 |
| media_reupload | 1119.5 | 1401.5 | 1269.7 | 989.6 | 1105.2 | 984.5 | 713.9 | 900.5 | 1242.3 |
| media_delete | 2263.7 | 2464.7 | 3155.4 | 2319.5 | 2339.5 | 2330.8 | 2416.4 | 2451.7 | 2207.2 |
| link_access | 3770.7 | 4560.9 | 4777.6 | 4168.3 | 4114.9 | 3835 | 3501.6 | 3266 | 4553.6 |
| read_concurrent_20 | 7415.2 | 7757.2 | 7768.5 | 5836 | 6934.7 | 6518.6 | 6254.8 | 6792.8 | 6911 |
| write_concurrent_10 | 3676.6 | 3644.4 | 3927.5 | 3601.1 | 3583.3 | 3567.9 | 3185.5 | 3376 | 3214 |
| schedule_future | 1060.8 | 1152 | 1157 | 1037.6 | 961.4 | 1065.8 | 917.5 | 947.8 | 978 |
| read_list_short_with_scheduled | 2759.3 | 2807.4 | 2974.9 | 2575.3 | 2717.3 | 2352.6 | 2448 | 2563.8 | 2572 |
| read_single_scheduled_404 | 5347.8 | 5420.4 | 5291.2 | 4297.1 | 4420.5 | 4236.8 | 4244.6 | 4952.3 | 4395.6 |
| list_scheduled | 1662.7 | 1600.8 | 1592.4 | 1468.6 | 1457.3 | 1355.4 | 1317.7 | 1325.5 | 1418 |
| get_entry_draft_scheduled | 2637.8 | 2771.5 | 2830.7 | 2503.7 | 2536.3 | 2419.9 | 2490.2 | 2460.7 | 2459.5 |
| reschedule_entry | 2276.7 | 2216 | 2458.1 | 2387.5 | 2043.6 | 2045 | 2167.8 | 2099.2 | 1917.4 |
| scheduled_goes_live | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
| delete_entries | 2202 | 2726 | 2571.7 | 2176.5 | 2314.5 | 2150.4 | 2087.9 | 2131.9 | 2152.8 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 0.92 / 2.51 | 0.88 / 2.51 | 0.89 / 2.47 | 1.12 / 2.64 | 1.45 / 3.4 | 1.16 / 2.81 | 1.22 / 2.52 | 1.16 / 2.4 | 1.02 / 2.48 |
| schema_read | 0.38 / 0.94 | 0.33 / 0.83 | 0.37 / 0.78 | 0.35 / 0.88 | 0.43 / 1 | 0.41 / 0.78 | 0.44 / 0.9 | 0.39 / 0.9 | 0.41 / 0.84 |
| create_short | 0.58 / 1.31 | 0.59 / 0.84 | 0.62 / 0.87 | 0.64 / 0.95 | 0.67 / 0.95 | 0.69 / 0.89 | 0.68 / 1.11 | 0.67 / 0.94 | 0.66 / 0.91 |
| create_long | 1 / 1.69 | 0.97 / 1.59 | 0.96 / 1.55 | 0.93 / 1.99 | 1.02 / 1.6 | 1.02 / 1.51 | 1.02 / 2.06 | 1.01 / 1.61 | 1.01 / 1.61 |
| create_short_restcall | 0.46 / 0.76 | 0.46 / 0.65 | 0.44 / 0.57 | 0.44 / 0.69 | 0.48 / 0.66 | 0.48 / 0.64 | 0.47 / 0.71 | 0.48 / 0.69 | 0.51 / 0.69 |
| batch_create_short_x200 | 8.31 / 8.61 | 6.4 / 7.24 | 6.89 / 7.49 | 9.46 / 9.89 | 9.05 / 10.36 | 8.63 / 9.97 | 8.22 / 8.42 | 8.63 / 8.93 | 9.33 / 9.66 |
| read_list_short | 0.25 / 0.63 | 0.25 / 0.43 | 0.26 / 0.39 | 0.24 / 0.41 | 0.27 / 0.47 | 0.25 / 0.35 | 0.28 / 0.53 | 0.26 / 0.38 | 0.28 / 0.36 |
| read_list_long | 0.28 / 0.67 | 0.25 / 0.43 | 0.28 / 0.51 | 0.28 / 0.51 | 0.31 / 0.5 | 0.31 / 0.44 | 0.32 / 0.64 | 0.34 / 0.57 | 0.35 / 0.6 |
| read_single_short | 0.2 / 0.29 | 0.21 / 0.25 | 0.2 / 0.24 | 0.2 / 0.27 | 0.22 / 0.28 | 0.21 / 0.28 | 0.22 / 0.38 | 0.23 / 0.28 | 0.24 / 0.29 |
| read_single_long | 0.35 / 0.97 | 0.32 / 0.45 | 0.33 / 0.46 | 0.34 / 0.47 | 0.36 / 0.46 | 0.36 / 0.46 | 0.35 / 0.48 | 0.36 / 0.45 | 0.39 / 0.46 |
| read_304_etag | 0.21 / 0.49 | 0.18 / 0.24 | 0.19 / 0.24 | 0.19 / 0.24 | 0.2 / 0.29 | 0.2 / 0.28 | 0.22 / 0.28 | 0.2 / 0.26 | 0.19 / 0.25 |
| update_then_read | 0.73 / 1.31 | 0.74 / 0.92 | 0.71 / 0.93 | 0.8 / 1.22 | 0.81 / 1.08 | 0.87 / 1.09 | 0.88 / 1.36 | 0.81 / 1.02 | 0.85 / 1 |
| rewrite_dry_1pair | 4.53 / 4.53 | 4.31 / 4.31 | 4.32 / 4.32 | 4.91 / 4.91 | 4.62 / 4.62 | 4.93 / 4.93 | 5.15 / 5.15 | 4.73 / 4.73 | 4.64 / 4.64 |
| rewrite_dry_200pairs | 11.37 / 11.37 | 7.92 / 7.92 | 7.95 / 7.95 | 6.68 / 6.68 | 6.93 / 6.93 | 7.4 / 7.4 | 7.07 / 7.07 | 6.65 / 6.65 | 7.11 / 7.11 |
| rewrite_live_200pairs | 15.48 / 15.48 | 15.1 / 15.1 | 14.21 / 14.21 | 9.31 / 9.31 | 11.62 / 11.62 | 12.32 / 12.32 | 11.07 / 11.07 | 11.83 / 11.83 | 10.71 / 10.71 |
| media_upload_64kb | 0.77 / 1.51 | 0.86 / 1.37 | 0.8 / 1.45 | 0.99 / 3.16 | 0.96 / 1.31 | 1 / 1.13 | 0.86 / 2.35 | 0.87 / 2.23 | 0.88 / 1.06 |
| media_serve_64kb | 0.51 / 1.09 | 0.45 / 0.93 | 0.45 / 0.76 | 0.51 / 0.98 | 0.52 / 0.77 | 0.55 / 0.83 | 0.53 / 0.83 | 0.5 / 0.78 | 0.46 / 0.69 |
| media_reupload | 0.7 / 1.5 | 0.69 / 0.78 | 0.75 / 1.21 | 0.86 / 1.57 | 0.88 / 1.04 | 0.98 / 1.37 | 0.78 / 1.19 | 0.73 / 0.99 | 0.79 / 0.89 |
| media_delete | 0.36 / 1.04 | 0.35 / 0.79 | 0.3 / 0.35 | 0.38 / 0.63 | 0.4 / 0.53 | 0.4 / 0.52 | 0.37 / 0.6 | 0.38 / 0.46 | 0.36 / 0.9 |
| link_access | 0.22 / 0.44 | 0.22 / 0.27 | 0.2 / 0.26 | 0.23 / 0.3 | 0.24 / 0.28 | 0.26 / 0.27 | 0.24 / 0.45 | 0.25 / 0.3 | 0.22 / 0.28 |
| read_concurrent_20 | 2.23 / 4.83 | 2.26 / 4.56 | 2.26 / 5.07 | 2.59 / 7.16 | 2.41 / 4.75 | 2.5 / 6.19 | 2.35 / 6.39 | 2.27 / 4.92 | 2.33 / 5.21 |
| write_concurrent_10 | 2.25 / 5.52 | 2.28 / 6.11 | 2.13 / 4.82 | 2.07 / 5.37 | 2.23 / 5.46 | 2.14 / 5.55 | 2.27 / 7.5 | 2.29 / 5.62 | 2.27 / 5.63 |
| schedule_future | 0.78 / 1.4 | 0.76 / 0.97 | 0.74 / 0.93 | 0.8 / 1.37 | 0.91 / 1.08 | 0.87 / 0.96 | 0.9 / 1.55 | 0.91 / 1.18 | 0.89 / 1.21 |
| read_list_short_with_scheduled | 0.33 / 0.46 | 0.33 / 0.43 | 0.32 / 0.36 | 0.35 / 0.49 | 0.36 / 0.42 | 0.39 / 0.5 | 0.38 / 0.52 | 0.37 / 0.47 | 0.38 / 0.42 |
| read_single_scheduled_404 | 0.18 / 0.22 | 0.18 / 0.22 | 0.19 / 0.21 | 0.2 / 0.26 | 0.2 / 0.23 | 0.23 / 0.27 | 0.22 / 0.25 | 0.2 / 0.23 | 0.22 / 0.24 |
| list_scheduled | 0.58 / 0.75 | 0.6 / 0.71 | 0.61 / 0.72 | 0.67 / 0.81 | 0.68 / 0.75 | 0.71 / 0.84 | 0.75 / 0.91 | 0.75 / 0.87 | 0.69 / 0.78 |
| get_entry_draft_scheduled | 0.34 / 0.45 | 0.35 / 0.4 | 0.34 / 0.4 | 0.37 / 0.45 | 0.38 / 0.48 | 0.41 / 0.45 | 0.39 / 0.49 | 0.39 / 0.46 | 0.4 / 0.46 |
| reschedule_entry | 0.4 / 0.53 | 0.44 / 0.53 | 0.39 / 0.46 | 0.4 / 0.47 | 0.48 / 0.55 | 0.48 / 0.54 | 0.44 / 0.59 | 0.46 / 0.54 | 0.5 / 0.64 |
| scheduled_goes_live | 3105.47 / 3105.47 | 3105.8 / 3105.8 | 3111.28 / 3111.28 | 3105.81 / 3105.81 | 3106.37 / 3106.37 | 3106.86 / 3106.86 | 3105.87 / 3105.87 | 3105.92 / 3105.92 | 3110.9 / 3110.9 |
| delete_entries | 0.34 / 0.64 | 0.35 / 0.44 | 0.37 / 0.44 | 0.38 / 0.7 | 0.41 / 0.55 | 0.41 / 0.54 | 0.43 / 0.64 | 0.43 / 0.54 | 0.45 / 0.59 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 97 | 5 |
| bun-2cpu | bun 1.4.2 | 2 | 101 | 5 |
| bun-4cpu | bun 1.4.2 | 4 | 101 | 5 |
| deno-1cpu | deno 2.9.6 | 1 | 104 | 5 |
| deno-2cpu | deno 2.9.6 | 2 | 98 | 5 |
| deno-4cpu | deno 2.9.6 | 4 | 99 | 5 |
| node-1cpu | v24.13.1 | 1 | 115 | 5 |
| node-2cpu | v24.13.1 | 2 | 119 | 5 |
| node-4cpu | v24.13.1 | 4 | 121 | 5 |
